--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,7 @@
 
   <body ng-app="App"> 
     <!-- nav header -->
-  <nav class="navbar navbar-default">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Pokemon Party Planner</a>
-      </div>
-  </nav>
+
 
 
     <!-- <app ></app> -->
@@ -140,7 +136,7 @@
       </div> -->
 
 
-  <div class="container">
+  <div>
     <ui-view></ui-view>
   </div>
   <!-- <div ui-view></div> -->
